--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,31 @@ typings/
 
 # next.js build output
 .next
+
+#vscode project files
+.idea
+
+# eclipse project file
+.settings
+.project
+.classpath
+
+# Maven 
+target/
+
+# Binaries
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.war
+*.ear
+*.sar
+*.class
+
+# OS
+.DS_Store
