--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
       <artifactId>json</artifactId>
       <version>20180813</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-streams</artifactId>
+      <version>2.1.0</version>
+</dependency>
   </dependencies>
 
   <build>
